// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aws-counter.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/aws-counter.test.w": {
      "validates the AWS counter name": {
        "args": {
          "methods": {
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:validates the AWS counter name",
        "traces": [
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/test:validates the AWS counter name/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`dec.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/dec.test.w": {
      "dec()": {
        "args": {
          "methods": {
            "Counter": [
              "dec",
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:dec()",
        "traces": [
          {
            "data": {
              "message": "dec()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(5)",
              "result": "-1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(-4)",
              "result": "-6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(0)",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(5, "custom-key")",
              "result": "-1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "-6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(-4, "custom-key")",
              "result": "-6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "dec(0, "custom-key")",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "-2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/test:dec()/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`inc.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/inc.test.w": {
      "inc()": {
        "args": {
          "methods": {
            "Counter": [
              "inc",
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:inc()",
        "traces": [
          {
            "data": {
              "message": "inc()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(5)",
              "result": "1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(-4)",
              "result": "6",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(0)",
              "result": "2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "2",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(5, "custom-key")",
              "result": "-1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "4",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(-4, "custom-key")",
              "result": "4",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(0, "custom-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/test:inc()/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`initial.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/initial.test.w": {
      "initial": {
        "args": {
          "methods": {
            "Counter": [
              "initial",
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:initial",
        "traces": [
          {
            "data": {
              "message": "peek()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counterA/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "500",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counterB/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-198",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counterC/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/test:initial/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`peek.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/peek.test.w": {
      "peek": {
        "args": {
          "methods": {
            "Counter": [
              "peek",
              "inc",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:peek",
        "traces": [
          {
            "data": {
              "message": "peek()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("my-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("my-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "inc(nil, "my-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("my-key")",
              "result": "1",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/Counter/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/test:peek/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;

exports[`set.test.w 1`] = `
{
  "duration": "<DURATION>",
  "platforms": [
    "sim",
    "node_modules/@winglang/compatibility-spy/lib",
  ],
  "results": {
    "counter/set.test.w": {
      "set()": {
        "args": {
          "methods": {
            "Counter": [
              "set",
              "peek",
            ],
            "TestRunner": [
              "findTests",
            ],
          },
        },
        "pass": true,
        "path": "root/env0/test:set()",
        "traces": [
          {
            "data": {
              "message": "set(42)",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "42",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "set(-100)",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "-100",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "set(0)",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek()",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter1/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "set(42, "custom-key")",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "42",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "set(-100, "custom-key")",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "-100",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "set(0, "custom-key")",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "peek("custom-key")",
              "result": "0",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/counter2/Resource",
            "sourceType": "@winglang/sdk.sim.Resource",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
          {
            "data": {
              "message": "Invoke (payload=undefined).",
              "status": "success",
            },
            "level": "verbose",
            "sourcePath": "root/env0/test:set()/Handler",
            "sourceType": "@winglang/sdk.cloud.Function",
            "timestamp": "<TIMESTAMP>",
            "type": "resource",
          },
        ],
      },
    },
  },
}
`;
